# uda-intial-experment

./: .gitignore  pyproject.toml  singular-adapters.ipynb
domain_adaptation_project/conference-experment/: setup.py  source-mlm.ipynb  standalone-mlm-target.ipynb  task-after-unipelt-mlm.ipynb  task-aftermlm.ipynb  unipelt-source-mlm.ipynb  unipelt-target-mlm.ipynb
domain_adaptation_project/modules/config/: config.py
domain_adaptation_project/modules/data/: processed.py
domain_adaptation_project/modules/utils/: functions.py  model_saving.py  plotting.py  setup.py
domain_adaptation_project/notebooks/: domain-adapter-coral.ipynb  experment_1.ipynb  fuse-mlm-adapters.ipynb  lora-mlm-target copy.ipynb  lora-source-mlm.ipynb  merge-prefix-lora.ipynb  mlm-after-coral.ipynb  multi-block-without-coral.ipynb  multi-block.ipynb  prefix-tuning.ipynb  source-mlm.ipynb  stacked copy.ipynb  stacked.ipynb  standalone-mlm-target.ipynb  task-after-lora-mlm.ipynb  task-aftermlm.ipynb  test-mlm-with-adapter.ipynb  tests.ipynb  udapter-coral-implmentation.ipynb  union-lora-prefix.ipynb
domain_adaptation_project/notebooks/runs/Apr30_13-24-54_dnnlab5/: events.out.tfevents.1714472694.dnnlab5.8363.0
domain_adaptation_project/saved/adapters/: adapter_config.json
domain_adaptation_project/saved/adapters/domain-adapter-coral/: adapter_config.json
domain_adaptation_project/saved/adapters/domain_adapter_telephone_travel/: adapter_config.json
domain_adaptation_project/saved/adapters/inv_source_mlm/: adapter_config.json
(+25 files in other folders)
