[tool.poetry]
name = "intial-experments"
version = "0.1.0"
description = ""
authors = ["Rawhani"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
adapters = "^0.1.1"
torch = {version = "^2.2.0+cu118", source = "pytorch"}
torchvision = {version = "^0.17.0+cu118", source = "pytorch"}
jupyter = "^1.0.0"
datasets = "^2.17.0"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "2.12.0"
scikit-learn = "1.3"
pathlib = "^1.0.1"




[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
